@@ -236,7 +236,7 @@ public class NhlStatsService {
 
         // Process Player 0 if game connection found and report doesn't exist
         if (!gameConnectionsPlayer0.isEmpty()) {
-            GameConnectionEntity gameConnection0 = gameConnectionsPlayer0.get(0);
+            GameConnectionEntity gameConnection0 = gameConnectionsPlayer0.getFirst();
             if (!nhlGameReportRepository.existsByGameConnectionId(gameConnection0.getId())) {
                 // Create and save game report for Player 0
                 NhlGameReportEntity gameReport0 = new NhlGameReportEntity();
@@ -254,7 +254,7 @@ public class NhlStatsService {
 
         // Process Player 1 if game connection found and report doesn't exist
         if (!gameConnectionsPlayer1.isEmpty()) {
-            GameConnectionEntity gameConnection1 = gameConnectionsPlayer1.get(0);
+            GameConnectionEntity gameConnection1 = gameConnectionsPlayer1.getFirst();
             if (!nhlGameReportRepository.existsByGameConnectionId(gameConnection1.getId())) {
                 // Create and save game report for Player 1
                 NhlGameReportEntity gameReport1 = new NhlGameReportEntity();
